<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3_enter_email"/>

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Lab3_type_email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/TextViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3_enter_password"/>

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3_login_button"/>


</LinearLayout>