<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:theme="@style/AppTheme"
        />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lab7_currentTemp"
        android:layout_below="@+id/weatherImage"/>

    <TextView
        android:id="@+id/currentTempDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/currentTemp"
        android:layout_below="@+id/weatherImage"/>

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lab7_minTemp"
        android:layout_below="@+id/currentTemp"/>

    <TextView
        android:id="@+id/minTempDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/minTemp"
        android:layout_below="@id/currentTemp"/>

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lab7_maxTemp"
        android:layout_below="@id/minTemp"/>

    <TextView
        android:id="@+id/maxTempDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/maxTemp"
        android:layout_below="@id/minTemp"/>

    <TextView
        android:id="@+id/uvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lab7_UVrating"
        android:layout_below="@+id/maxTemp"/>

    <TextView
        android:id="@+id/uvRatingDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/uvRating"
        android:layout_below="@id/maxTemp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@id/uvRating"/>

</RelativeLayout>