<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:theme="@style/AppTheme"
        />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/chatRefresher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >

        <ListView
            android:id="@+id/chatListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chatSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lab4_chatSendButton" />

        <EditText
            android:id="@+id/chatEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Lab4_chatEditText"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/chatReceiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lab4_chatReceiveButton" />

    </LinearLayout>

</LinearLayout>